versioned_docs/version-2026.1.6/professor/professor.md
---
sidebar_position: 1
---

# Docentes da versão do horário

## Administração
- [Daiane Cristina da Silva - daiane.cristina@ifpr.edu.br](professor/daiane_cristina_da_silva)
- [Haroldo Yutaka Misunaga - haroldo.misunaga@ifpr.edu.br](professor/haroldo_yutaka_misunaga)
- [Leocadia Candido da Silva - leocadia.silva@ifpr.edu.br](professor/leocadia_candido_da_silva)
- [Lechan Colares Santos - lechan.santos@ifpr.edu.br](professor/lechan_colares_santos)

## Agronomia
- [Diego Armando Amaro da Silva - diego.silva@ifpr.edu.br](professor/diego_armando_amaro_da_silva)
- [Elias Franco - elias.franco@ifpr.edu.br](professor/elias_franco)
- [Fernanda da Silva Ferreira - fernanda.ferreira@ifpr.edu.br](professor/fernanda_da_silva_ferreira)
- [Octavio Henrique Viana - octavio.viana@ifpr.edu.br](professor/octavio_henrique_viana)

## Alimentos
- [Beatriz de Souza Gonçalves Proença - beatriz.proenca@ifpr.edu.br](professor/beatriz_de_souza_goncalves_proenca)

## Atendimento Educacional Especializado

- [Paula Fabiane de Souza - paula.souza@ifpr.edu.br](professor/paula_fabiane_de_souza)

## Artes
- [Josiane Paula Maltauro - josiane.maltauro@ifpr.edu.br](professor/josiane_paula_maltauro)
- [Simone de Miranda - simone.miranda@ifpr.edu.br](professor/simone_de_miranda)

## Automação Industrial
- [Mario Eduardo de Barros Gomes Nunes da Silva - mario.silva@ifpr.edu.br](professor/mario_eduardo_de_barros_gomes_e_nunes_da_silva)

## Biologia
- [Eliana Pelicon Pereira Figueira - eliana.figueira@ifpr.edu.br](professor/eliana_pelicon_pereira_figueira)
- [Josiane Hammes - josiane.hammes@bpkedu.com.br](professor/josiane_hammes)
- [Karina Dias Espartosa - karina.espartosa@ifpr.edu.br](professor/karina_dias_espartosa)
- [Leandro Luiz Borges - leandro.borges@ifpr.edu.br](professor/leandro_luiz_borges) .

## Ciência da Computação
- [Rafael Gil Ferques - rafael.ferques@ifpr.edu.br](professor/rafael_gil_ferques)
- [Rafael Luis Bartz - rafael.bartz@ifpr.edu.br](professor/rafael_luis_bartz)


## Educação Física
- [Franciele Fernandes Baliero - franciele.baliero@ifpr.edu.br](professor/franciele_fernandes_baliero)
- [Kleber Augusto Michalichem - kleber.michalichem@ifpr.edu.br](professor/kleber_augusto_michalichem)
- [Tiago Amaral Silva - tiago.amaral@ifpr.edu.br](professor/tiago_amaral_silva)

## Elétrica
- [Alex Miyamoto Mussi - alex.mussi@ifpr.edu.br](professor/alex_miyamoto_mussi)
- [Danilo Hungaro Micheletti - danilo.micheletti@ifpr.edu.br](professor/danilo_hungaro_micheletti)
- [Jair Fajardo Junior - jair.junior@ifpr.edu.br](professor/jair_fajardo_junior)
- [Juliano da Rocha Queiroz - juliano.queiroz@ifpr.edu.br](professor/juliano_da_rocha_queiroz)
- [Wylliam Salviano Gongora - wylliam.gongora@ifpr.edu.br](professor/wylliam_salviano_gongora)

## Engenharia de Software
- [Caroline Domingues Porto do Nascimento Barbieri - caroline.barbieri@ifpr.edu.br](professor/caroline_domingues_porto_do_nascimento_barbieri)

## Filosofia
- [Adiel Felipe Felisberto da Silva - adielfelipeadv@gmail.com](professor/adiel_felipe_felisberto_da_silva)
- [Jose Jurandir Pereira Junior - jose.jurandir@ifpr.edu.br](professor/jose_jurandir_pereira_junior)
- [Jose Provetti Junior - jose.provetti@ifpr.edu.br](professor/jose_provetti_junior)

## Física
- [Alex Soares de Brito - alex.brito@ifpr.edu.br](professor/alex_soares_de_brito)
- [Flavia Satie Noguti - flaviasat@hotmail.com](professor/flavia_satie_noguti)
- [Vinicius de Souza Lamego - vinicius.lamego@ifpr.edu.br](professor/vinicius_de_souza_lamego)
- [Vitor Prestes Luzio - vitor.luzio@ifpr.edu.br](professor/vitor_prestes_luzio)

## Geografia
- [Alexandre Roberto Valcarenghi - alexandre.valcarenghi@ifpr.edu.br](professor/alexandre_roberto_valcarenghi)
- [Jhones Donizetti Mendes - jhones.mendes@ifpr.edu.br](professor/jhones_donizetti_mendes)
- [Renato Lada Guerreiro - renato.guerreiro@ifpr.edu.br](professor/renato_lada_guerreiro)

## Gestão

- [Alexandre José Schumacher - alexandre.schumacher@ifpr.edu.br](professor/alexandre_jose_schumacher)

## História
- [Andre Alexandre Valentini - andre.valentini@ifpr.edu.br](professor/andre_alexandre_valentini)
- [Jael dos Santos - jael.dossantos@ifpr.edu.br](professor/jael_dos_santos)
- [Suzane Conceicao Pantolfi Tostes - suzane.tostes@ifpr.edu.br](professor/suzane_conceicao_pantolfi_tostes)

## Informática
- [Alexandre Rodrigues Monge - alexandre.monge@ifpr.edu.br](professor/alexandre_rodrigues_monge)
- [Alvaro Jose de Almeida Araujo - alvaro.araujo@ifpr.edu.br](professor/alvaro_jose_de_almeida_araujo)
- [Douglas Barbosa Sousa - douglas.sousa@ifpr.edu.br](professor/douglas_barbosa_sousa)
- [Humberto Fioravante Ferro - humberto.ferro@ifpr.edu.br](professor/humberto_fioravante_ferro)
- [Luis Henrique Manosso Von Mecheln - luis.vonmecheln@ifpr.edu.br](professor/luis_henrique_manosso_von_mecheln)
- [Olavo Jose Luiz Junior - olavo.junior@ifpr.edu.br](professor/olavo_jose_luiz_junior)
- [Sergio Ricardo Ferrazoli - sergio.ferrazoli@ifpr.edu.br](professor/sergio_ricardo_ferrazoli)
- [Vagner Simoes Santos - vagner.simoes@ifpr.edu.br](professor/vagner_simoes_santos)

## Matemática
- [Daiane Cristina da Silva - daiane.cristina@ifpr.edu.br](professor/daiane_cristina_da_silva)
- [Elenice Josefa Kolancko Setti - elenice.setti@ifpr.edu.br](professor/elenice_josefa_kolancko_setti)
- [Elizangela Mendes Pereira - elizangela.mendes@ifpr.edu.br](professor/elizangela_mendes_pereira)
- [Felipe Fraga de Oliveira - felipefraga1999@hotmail.com](professor/felipe_fraga_de_oliveira)
- [Jonatan Ismael Eisermann - jonatan.eisermann@ifpr.edu.br](professor/jonatan_ismael_eisermann)
- [Mauro Cesar de Souza Siena - mauro.siena@ifpr.edu.br](professor/mauro_cesar_de_souza_siena)

## Mecânica
- [Darlan Roque Dapieve - darlan.dapieve@ifpr.edu.br](professor/darlan_roque_dapieve)
- [Fabio Fernandes da Silva - fabio.fernandes@ifpr.edu.br](professor/fabio_fernandes_da_silva)
- [Luiz Inacio Chaves - luiz.chaves@ifpr.edu.br](professor/luiz_inacio_chaves)
- [Sergio Takahashi - sergio.takahashi@ifpr.edu.br](professor/sergio_takahashi)

## Português e Espanhol
- [Michelli Cristina Galli - michelli.galli@ifpr.edu.br](professor/michelli_cristina_galli)
- [Talita Bortolini - talita.bortolini@bpkedu.com.br](professor/talita_bortolini)

## Português e Inglês
- [Andrey Felipe Martins - andrey.martins@ifpr.edu.br](professor/andrey_felipe_martins)
- [Celina de Oliveira Barbosa Gomes - celina.gomes@ifpr.edu.br](professor/celina_de_oliveira_barbosa_gomes)
- [Katia Cristiane Kobus Novaes - katia.novaes@ifpr.edu.br](professor/katia_cristiane_kobus_novaes)
- [Patricia Denicolo David Prati - patricia.prati@ifpr.edu.br](professor/patricia_denicolo_david_prati)


## Química
- [Antonio Cesar Godoy - antonio.godoy@ifpr.edu.br](professor/antonio_cesar_godoy)
- [Cosme Oliveira da Silva - cosme.silva@ifpr.edu.br](professor/cosme_oliveira_da_silva)
- [Deysiane Lima Salvador - prof.deysianesalvador@gmail.com](professor/deysiane_lima_salvador)
- [Sabrina Kerkhoff - sabrina.kerkhoff@ifpr.edu.br](professor/sabrina_kerkhoff)

## Secretariado Executivo
- [Keyla Christina Almeida Portela - keyla.portela@ifpr.edu.br](professor/keyla_christina_almeida_portela)

## Sociologia
- [Everaldo Lorensetti - everaldo.lorensetti@ifpr.edu.br](professor/everaldo_lorensetti)
- [Olavo Henrique Vieira Veiga - olavo.veiga@ifpr.edu.br](professor/olavo_henrique_vieira_veiga)

## Veterinária
- [Marcos Rogerio Oliveira - marcos.rogerio@ifpr.edu.br](professor/marcos_rogerio_oliveira)

## Zootecnia
- [Leiliane Cristine de Souza - leiliane.souza@ifpr.edu.br](professor/leiliane_cristine_de_souza)
- [Roberto Haruyoshi Ito - roberto.ito@ifpr.edu.br](professor/roberto_haruyoshi_ito)